Bug 1373016 - switch from a tip panel to a permanent message for empty overflow panels in customize mode for photon, r=jaws
MozReview-Commit-ID: GhQoSgPXL9q

UltraBlame original commit: 5de26737d215386bccc3aef472f80d5ecc7664b0

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1237,7 +1237,6 @@ toolbarpaletteitem[place="palette"] > #downloads-button[indicator] > #downloads-
 }
 
 #customization-panelHolder > #widget-overflow-fixed-list {
-  padding-bottom: 50px; 
   flex: 0 1 auto; 
   display: flex;
   flex-direction: column;
